--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -1,4 +1,14 @@
-.title {
+.temp {
   margin-top:300rpx;
   text-align:center;
+  font-size: 200rpx;
+  line-height: 280rpx;
+  opacity: 0.8;
+}
+
+.weather {
+  font-size: 40rpx;
+  line-height: 56rpx;
+  text-align: center;
+  opacity: 0.65
 }
