--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,4 +1,13 @@
 <view class="weather-wrapper">
+
+  <button class="location-wrapper" open-type="{{ localtionAuthType==1 ? 'openSetting' : '' }}" bindopensetting="onTapLocation" bindtap="onTapLocation" plain="true">
+    <view class="location">
+      <image class="location-icon" src="/images/location-icon.png"></image>
+      <view class="location-text">{{city}}</view>
+    </view>
+    <view class="location-tips">{{locationAuthTips}}</view>
+  </button>
+
   <view class="temp">{{nowTemp}}</view>
   <view class="weather">{{nowWeather}}</view>
   <image class="weather-bg" src="{{nowWeatherBackground}}" mode="scaleToFill"></image>
